--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&family=Pacifico&display=swap"
         rel="stylesheet">
-    <title>res</title>
+    <title>restoran</title>
 </head>
 
 <body>
