--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <a href="#menu">menu</a>
                     </li>
                     <li>
-                        <a href="#">contact</a>
+                        <a href="#contact">contact</a>
                     </li>
                 </ul>
             </div>
@@ -423,7 +423,7 @@
         </div>
     </div>
     <!-- Footer -->
-    <footer>
+    <footer id="contact">
         <div class="container">
             <div class="company">
                 <div class="M-heading">
